# AI-Industry-Diagnostics

./: .gitignore  README.md  pyproject.toml  run.bat  run.sh
.github/workflows/: ci.yml
src/aidiag/: __init__.py  __main__.py  app.py  auth.py  config.py  dashboard.py  database.py  models.py  schemas.py
src/aidiag/api/: assessments.py  diagnostics.py  roadmaps.py
src/aidiag/data/: __init__.py  dimensions.py  use_cases.py
src/aidiag/services/: __init__.py  assessment_service.py  benchmark_service.py  diagnostic_service.py  ml_pipeline.py  roadmap_service.py
tests/: conftest.py  test_assessment.py  test_benchmark.py  test_diagnostic.py  test_ml_pipeline.py  test_roadmap.py
